--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
   <!-- Maps JS: replace key if needed; uses callback=initMap to ensure initMap is available -->
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAI7TmQ8eRjelU2YdLkFEAZjdaok3P1vvI&libraries=places,geometry&callback=initMap">
+    src="https://maps.googleapis.com/maps/api/js?key=YOUR API KEY&libraries=places,geometry&callback=initMap">
   </script>
 </head>
 <body>
@@ -79,3 +79,4 @@
   <div id="map"></div>
 </body>
 </html>
+
